CSS: Prevent footer from overlapping sidebar

--- a/public/css/icinga/layout.less
+++ b/public/css/icinga/layout.less
@@ -2,7 +2,7 @@
 
 #footer {
   bottom: 0;
-  left: 0;
+  left: 12em;
   right: 0;
   position: fixed;
   z-index: 999;
@@ -206,10 +206,6 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
-}
-
-#layout:not(.minimal-layout) #notifications {
-  padding-left: 12em;
 }
 
 #notifications > li {
