--- a/public/css/icinga/widgets.less
+++ b/public/css/icinga/widgets.less
@@ -68,7 +68,6 @@
   color: @text-color-on-icinga-blue;
   line-height: 1.5em;
   padding: 0.5em 1em 0.5em 3em;
-  margin-left: 12em;
 
   position: relative;
 
